<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.sunbird</groupId>
        <artifactId>certificate-generator-service</artifactId>
        <version>1.2.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.sunbird.incredible</groupId>
    <artifactId>certificate-processor</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>
    <name>Certificate Processor</name>
    <description>Certificate Generation Processor using the incredible specification.</description>
    <url>https://www.sunbird.org/</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Sunbird</name>
            <email>info@sunbird.org</email>
            <organization>Sunbird</organization>
            <organizationUrl>https://www.sunbird.org/</organizationUrl>
        </developer>
    </developers>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <scm>
        <connection>scm:git:git://github.com/project-sunbird/cert-service.git</connection>
        <developerConnection>scm:git:ssh://github.com/project-sunbird/cert-service.git</developerConnection>
        <url>https://github.com/project-sunbird/cert-service/tree/master</url>
    </scm>
    <properties>
    </properties>
    <dependencies>
        <dependency>
            <!-- velocity framework-->
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-tools</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Jackson Annotations -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>net.karmayogibharat</groupId>
            <artifactId>cloud-store-sdk_2.12</artifactId>
            <version>1.4.8</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-easymock -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <!--<scope>test</scope>-->
        </dependency>

        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>${powermock.version}</version>
            <!--<scope>test</scope>-->
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpClient.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.8</version>
        </dependency>

    </dependencies>
    <repositories>
        <repository>
            <id>itext</id>
            <name>iText Repository - releases</name>
            <url>https://repo.itextsupport.com/releases</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>17</release>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
            </plugin>-->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.5</version>
                <configuration>
                    <destFile>target/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>target/coverage-reports/jacoco-unit.exec</dataFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <!-- This is necessary for gpg to not try to use the pinentry programs -->
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.7</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <!-- <autoReleaseAfterClose>true</autoReleaseAfterClose> -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.google.inject</pattern>
                                    <shadedPattern>shaded.cloudsdk.inject</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <!-- Core SDK -->
                                    <include>net.karmayogibharat:cloud-store-sdk_2.12</include>
                                    <!-- Guice for shading -->
                                    <include>com.google.inject:guice</include>
                                    <include>com.google.inject.extensions:guice-assistedinject</include>
                                    <include>aopalliance:aopalliance</include>
                                    <!-- Tika -->
                                    <include>org.apache.tika:tika-core</include>
                                    <!-- JClouds core and commonly used modules -->
                                    <include>org.apache.jclouds:jclouds-core</include>
                                    <include>org.apache.jclouds:jclouds-blobstore</include>
                                    <include>org.apache.jclouds:jclouds-allblobstore</include>
                                    <include>org.apache.jclouds:jclouds-compute</include>
                                    <include>org.apache.jclouds:jclouds-allcompute</include>
                                    <include>org.apache.jclouds:jclouds-loadbalancer</include>
                                    <include>org.apache.jclouds:jclouds-allloadbalancer</include>
                                    <include>org.apache.jclouds:jclouds-scriptbuilder</include>
                                    <include>org.apache.jclouds:jclouds-all</include>
                                    <!-- JClouds APIs and providers potentially used by GcloudStorageService -->
                                    <include>org.apache.jclouds.api:googlecloud</include>
                                    <include>org.apache.jclouds.provider:google-cloud-storage</include>
                                    <include>org.apache.jclouds.api:s3</include>
                                    <include>org.apache.jclouds.provider:aws-s3</include>
                                    <include>org.apache.jclouds.api:openstack-swift</include>
                                    <!-- Jackson -->
                                    <include>com.fasterxml.jackson.core:jackson-databind</include>
                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                    <include>com.fasterxml.jackson.core:jackson-core</include>
                                    <include>com.fasterxml.jackson.module:jackson-module-scala_2.12</include>
                                    <!-- Guava -->
                                    <include>com.google.guava:guava</include>
                                    <include>com.google.guava:failureaccess</include>
                                    <include>com.google.guava:listenablefuture</include>
                                    <include>com.google.code.findbugs:jsr305</include>
                                    <include>org.checkerframework:checker-qual</include>
                                    <include>com.google.errorprone:error_prone_annotations</include>
                                    <include>com.google.j2objc:j2objc-annotations</include>
                                    <!-- JAXB and Activation -->
                                    <include>javax.activation:activation</include>
                                    <include>javax.xml.bind:jaxb-api</include>
                                    <include>javax.activation:javax.activation-api</include>
                                    <include>jakarta.xml.bind:jakarta.xml.bind-api</include>
                                    <include>com.sun.activation:jakarta.activation</include>
                                    <include>org.glassfish.jaxb:jaxb-runtime</include>
                                    <include>org.glassfish.jaxb:txw2</include>
                                    <include>com.sun.istack:istack-commons-runtime</include>
                                    <include>org.jvnet.staxex:stax-ex</include>
                                    <include>com.sun.xml.fastinfoset:FastInfoset</include>
                                    <include>com.sun.xml.bind:jaxb-impl</include>
                                    <!-- Other common utilities -->
                                    <include>com.google.code.gson:gson</include>
                                    <include>org.apache.commons:commons-lang3</include>
                                    <include>commons-io:commons-io</include>
                                    <include>commons-codec:commons-codec</include>
                                    <include>org.apache.httpcomponents:httpclient</include>
                                    <include>org.apache.httpcomponents:httpcore</include>
                                    <include>joda-time:joda-time</include>
                                </includes>
                                <excludes>
                                    <!-- Exclude only app-specific conflicting dependencies -->
                                    <exclude>com.typesafe.play:*</exclude>
                                    <exclude>org.scala-lang:*</exclude>
                                    <exclude>akka:*</exclude>
                                    <!-- Exclude test and unrelated dependencies -->
                                    <exclude>junit:*</exclude>
                                    <exclude>org.powermock:*</exclude>
                                    <exclude>org.mockito:*</exclude>
                                    <exclude>org.hamcrest:*</exclude>
                                    <exclude>org.objenesis:*</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                            </filters>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                            <!-- Disable minimization for full inclusion -->
                            <minimizeJar>false</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>

</project>